--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>DeepaMehta 3 Type Editor</name>
     <groupId>de.deepamehta</groupId>
     <artifactId>deepamehta3-typeeditor</artifactId>
-    <version>0.4</version>
+    <version>0.4.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta3-core</artifactId>
-            <version>0.4</version>
+            <version>0.4.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
