--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>DeepaMehta 3 Type Editor</name>
     <groupId>de.deepamehta</groupId>
     <artifactId>deepamehta3-typeeditor</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.4.1</version>
     <packaging>bundle</packaging>
 
     <parent>
